scss/components/mobilemenu.scss
.menu-toggle {
  padding: 0.85rem;
  z-index: 100;
  position: absolute;
  justify-content: center;
  margin: 1rem;
  display: flex;
  border-radius: 0.5rem;
  left: 0;
  top: 0;

  path {
    transition: all 1s ease 0s;
  }

  &.opened {
    path {
      fill: var(--color-white1);
    }
  }

  background: var(--color-grey1);
  border: 0;
  svg {
    path {
      fill: var(--color-grey2);
    }
  }

  &:focus {
    outline: 0;
  }
  &:active {
  }
}

@media only screen and (min-width: $breakpoint-md) {
  .c-mobilemenu__button { display: none; }
}

.c-mobilemenu__submenu {
  line-height: 2.5rem;
}

header.small .c-mobilemenu__submenu {
  // transform: scaleY(0);
  height: 0px;
  padding-top: 0;
  padding-bottom: 0;

  ul {
    display: none;
  }
}

.c-mobilemenu {
  // opacity: 0;
  position: fixed;
  z-index: 10;

  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  transition: all 0.5s ease-in;

  flex-grow: 2;

  transform: translateX(-100%);
  background: var(--color-grey3);
  // margin-top: 100px;
  padding-top: 5rem;

  &.opened {
    transform: translateX(0);
    opacity: 1;

  }

  &__submenu {
    display: none;
    transition: all 0.35s ease;
    transform-origin: 0px 0px  ;
    padding: 12px;
    // border-top: solid 2px var(--color-default-accent);
    background: var(--color-grey4);
    ul {
      display: flex;
      justify-content: space-around;
    }
  }

    // margin-top: 88px;

    transition: all 0.5s ease-in;
    transition-delay: 0.3s;

    opacity: 0;

    list-style: none;
    line-height: $baseFontSize * 3;
    font-size: $baseFontSize * 1.5;

  li {
    font-family: $fontPrimary;
    text-align: center;

    border-bottom: solid 1px var(--color-grey1);

    a {
      $px: 2px;
      // line-height: 6rem !important;
      transition: all 1s ease 0s;
      border-bottom: solid $px transparent;
      outline: none;
      padding: 0.15rem 0rem;
      position: relative;

      color: var(--color-grey2);

      /* Primary menu links */

      &:focus, &:hover {
        color: var(--color-white1);

        border-bottom: solid $px var(--color-grey4);
      }
    }
  }
}


@media only screen and (min-width: $breakpoint-md) {
  .menu-toggle {
    display: none;

  }
  .c-mobilemenu__submenu { display: block;   }
  .c-mobilemenu {
    transform: none;
    position: relative;
    padding-top: 0 !important;


      margin-top: 0;
      opacity: 1;
      display: flex;
      justify-content: space-around;
      align-items: center;
      li {
        border: none;
        line-height: normal;
      }


  }
}

